New update for my project

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Shop</title>
-    <Meta name = "author" content="Brian Magnan"></Meta>
+    <Meta name = "author" content="Brian Magnan">
+    <meta name="description" content="This is a webpage I'm making for the coffeeshop">
+    <meta name="keywords" content="Coffee, Coffeeshop, website">
+
      <link rel="stylesheet" href="./pages/index.css">
      <link rel="stylesheet" href="./vendor/normalize.css">
      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -16,7 +19,5 @@
 <body>
   <div class="page">
   </div>
-
-
 </body>
 </html>
