New update for my project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <Meta name = "author" content="Brian Magnan">
     <meta name="description" content="This is a webpage I'm making for the coffeeshop">
     <meta name="keywords" content="Coffee, Coffeeshop, website">
-
      <link rel="stylesheet" href="./pages/index.css">
      <link rel="stylesheet" href="./vendor/normalize.css">
      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -17,7 +16,9 @@
 
 </head>
 <body>
-  <div class="page">
-  </div>
+  <div class="page"></div>
+  <header><div class="header"></div></header>
+  <main><div class="conetent"></div></main>
+  <footer><div class="footer"></div></footer>
 </body>
 </html>
