--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
 </head>
 <body>
-  <div class="page"></div>
-  <header><div class="header"></div></header>
-  <main><div class="conetent"></div></main>
-  <footer><div class="footer"></div></footer>
+  <div class="page">
+    <header class="header"></header>
+    <main class="content"></main>
+    <footer class="footer"></footer>
+  </div>
+
 </body>
 </html>
