--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="header__footer">
           <div>
           <p class="header__paragraph">Hours:</p>
-          <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
-          <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
+          <p class="header__paragraph">Monday  - Friday (10:00 - 19:00)</p>
+          <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
         </div>
           <p class="header__paragraph">200 Success Avenue, The Town of Triple Peaks</p>
         </div>
@@ -71,7 +71,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
             ></iframe>
             <p class="recipes__video-caption">
-              <span>Title </span> <span>Time</span></p>
+              <span>Aeropress recipe </span> <span>~5 min</span></p>
           </li>
           <li>
             <iframe
@@ -82,7 +82,7 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p class="recipes__video-caption">
-              <span>Title </span> <span>Time</span></p>
+              <span>French press recipe </span> <span>~15 min</span></p>
           </li>
         </ul>
 
