--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#recipes-id" class="nav__link">Recipes</a>
+              <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="#reservation-id" class="nav__link">Book a table</a>
+              <a href="#reservation" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a href="#menu-id" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="#about-id" class="nav__link">Contacts</a>
+              <a href="#about" class="nav__link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -69,7 +69,7 @@
         </div>
       </header>
       <main class="content">
-        <section class="recipes">
+        <section id="recipes" class="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -108,9 +108,10 @@
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+
+        <section id="reservation" class="reservation"></section>
+        <section id="menu" class="menu"></section>
+        <section id="about" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
