--- a/index.html
+++ b/index.html
@@ -109,7 +109,69 @@
           </ul>
         </section>
 
-        <section id="reservation" class="reservation"></section>
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  class="form__input"
+                  id="name-input"
+                  type="text"
+                  placeholder="Name Surname"
+                  required
+                />
+              </label>
+              <label for="guest-input" class="form__label">
+                Number of guests *
+                <input
+                  class="form__input"
+                  id="guest-input"
+                  type="number"
+                  placeholder="1-8"
+                  min="1"
+                  max="8"
+                  required
+                />
+              </label>
+              <label for="date-input" class="form__label">
+                Date & time *
+                <input
+                  class="form__input"
+                  id="date-input"
+                  type="datetime-local"
+                  required
+                />
+              </label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  class="form__input"
+                  id="email-input"
+                  type="email"
+                  placeholder="email@email.com"
+                  required
+                />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label for="checkbox" class="form__label form__label_type_checkbox">
+              <input
+                id="checkbox"
+                class="form__checkbox"
+                type="checkbox"
+                required
+              />
+              I agree with the terms of use
+            </label>
+          </form>
+          <form class="form__fieldset"></form>
+          <form class="form__label"></form>
+          <form class="form__input"></form>
+          <form class="form-input"></form>
+        </section>
+
         <section id="menu" class="menu"></section>
         <section id="about" class="about"></section>
       </main>
