--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="keywords" content="Coffee, Coffeeshop, website" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +25,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            src="./images/logo_coffeeshop_dark.svg"
+            src="images/logo_coffeeshop_dark.svg"
             alt="Coffeeshop logo"
             class="nav__logo"
           />
@@ -53,7 +53,7 @@
           the cozy vibes to help you get creative.
         </p>
         <img
-          src="/images/inside_coffee_shop.png"
+          src="images/inside_coffee_shop.png"
           alt="Coffee Shop illustration"
           class="header__image"
         />
@@ -79,8 +79,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=bczkBfIJkETUpUMv"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -94,8 +92,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=jhc_G4og2iKRLXDn"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -155,7 +151,7 @@
                 />
               </label>
             </fieldset>
-            <button class="form__button">Book a table</button>
+            <button class="form__button" type="submit">Book a table</button>
             <label for="checkbox" class="form__label form__label_type_checkbox">
               <input
                 id="checkbox"
@@ -264,7 +260,7 @@
       <footer class="footer">
         <div class="footer__content">
           <img
-            src="./images/logo_coffeeshop_light.svg"
+            src="images/logo_coffeeshop_light.svg"
             alt="Logo_coffeeshop_light"
             class="footer__logo"
           />
@@ -274,7 +270,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link"
                   ><img
-                    src="./images/facebook_white.svg"
+                    src="images/facebook_white.svg"
                     alt="facebook icon"
                     class="footer__social-icon"
                   />Facebook</a
@@ -283,7 +279,7 @@
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link"
                   ><img
-                    src="./images/instagram_white.svg"
+                    src="images/instagram_white.svg"
                     alt="instagram icon"
                     class="footer__social-icon"
                   />Instagram</a
